--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
 env/
+
+# Client
+client/node_modules/
+client/.pnp
+client/.npn.js
+client/coverage
+client/build
+client/.DS_Store
+client/.env.local
+client/.env.development.local
+client/.env.test.local
+client/.env.production.local
+client/npm-debug.log*
+client/yarn-debug.log*
+client/yarn-error.log*
+client/package-lock.json
