--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,7 @@ client/.npn.js
 client/coverage
 client/build
 client/.DS_Store
-client/.env.local
-client/.env.development.local
-client/.env.test.local
-client/.env.production.local
+client/.env*
 client/npm-debug.log*
 client/yarn-debug.log*
 client/yarn-error.log*
